# capnp-demo

./: .cproject  .project  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt  capnp_c.h
proto/: CMakeLists.txt  demo.capnp  demo.capnp.c  demo.capnp.h
